part 1 of yeild strategy is completed

--- a/server/.env
+++ b/server/.env
@@ -8,9 +8,13 @@ XRPL_OPERATOR_SECRET=sEdSuTnZbKfsnPLDKD9dxkoDHj7pqYN
 FLARE_RPC_URL=https://coston2-api.flare.network/ext/bc/C/rpc
 # FLARE_OPERATOR_PRIVATE_KEY= # Generate with POST /api/generate-wallets
 
+# FXRP Token Address (ERC20 on Coston2)
+# This is the wrapped XRP token that users receive on Flare
+FXRP_TOKEN_ADDRESS=0x0b6A3645c240605887a5532109323A3E12273dc7
+
 # FDC Configuration
 FDC_VERIFIER_URL=https://fdc-verifiers-testnet.flare.network
-DA_LAYER_URL=https://da-layer-testnet.flare.network
+DA_LAYER_URL=https://ctn2-data-availability.flare.network
 FDC_API_KEY=00000000-0000-0000-0000-000000000000
 
 # Server
